<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/top_dark"
    android:padding="16dp"
    android:gravity="center">

    <!-- Small Icon at the Top-Left Corner -->

    <!-- Phone Number Field -->

    <!-- Send OTP Button -->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_phone_number"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/country_code"
        app:layout_constraintStart_toEndOf="@+id/country_code"
        app:layout_constraintTop_toTopOf="@+id/country_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendOtpButton"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/send_otp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumberTextInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/phoneNumberTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/acceptCheckBox" />

    <TextView
        android:id="@+id/Terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/privacy_policy"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="84dp"
        android:text="+91"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_direction_text" />

    <TextView
        android:id="@+id/enter_phone_direction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/enter_your_phone_number"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verification_direction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/gigachat_need_to_verify_your_account"
        android:textColor="@color/light_grey"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_phone_direction_text" />

    <CheckBox
        android:id="@+id/acceptCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="@+id/phoneNumberTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextInputLayout" />

    <TextView
        android:id="@+id/termsAndPrivacyTextView"
        android:layout_width="215dp"
        android:layout_height="51dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"
        android:layout_toEndOf="@id/acceptCheckBox"
        android:text="@string/term_condition_text"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/acceptCheckBox"
        app:layout_constraintStart_toEndOf="@+id/acceptCheckBox"
        app:layout_constraintTop_toTopOf="@+id/acceptCheckBox"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
