<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/top_dark"
    tools:context=".authentication.UserprofileInitialisationFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/camera_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Enter_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:textSize="16sp"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:textColor="@color/white"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/enter_bio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/bio"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/complete"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:text="@string/verify_otp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/termsAndPrivacyTextView"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/this_name_and_bio_will_be_visible_to_anyone_you_chat_with"
        android:textColor="@color/light_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_bio"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>